# terraria_clone

./: CMakeLists.txt  EngineUtilsClass.cpp  EngineUtilsClass.h  Grid.cpp  Grid.h  TextureContainer.cpp  TextureContainer.h  Tiles.cpp  Tiles.h  ToDoList.txt  globals.h  main-game.cpp  test.h
lib/include/SDL2_include/: SDL_main.h
xml/: dirt_tiles.xml
